Now the task are in a js list

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ html{
     padding: 30px 40px;
     color: white;
     text-align: center;
+    margin-top: 5%;
   }
   
   /* Clear floats after the header */
