--- a/assets/styles-core.css
+++ b/assets/styles-core.css
@@ -17,12 +17,7 @@ header {
   color: white;
 }
 
-.dark-background-color {
-  background-color: #29191a;
-  opacity: 90%;
-}
-
-.main {
+main {
   width: 60%;
   margin: auto;
 }
@@ -37,9 +32,9 @@ footer {
   text-align: center;
 }
 
-/* Incluir el borde y el padding en el ancho y la altura total de cada elemento */
-* {
-  box-sizing: border-box;
+.dark-background-color {
+  background-color: #29191a;
+  opacity: 90%;
 }
 
 h2 {
@@ -54,10 +49,11 @@ ul {
   list-style-type: none;
 }
 
-ul li {
+li {
   cursor: pointer;
-  position: relative;
-  padding: 12px 8px 12px 40px;
+  display: flex;
+  align-items: center;
+  padding-left: 40px;
   background: #eee;
   font-size: 18px;
   transition: 0.2s;
@@ -72,16 +68,16 @@ ul li:hover {
   background: #ddd;
 }
 
+li .content {
+  flex-grow: 1;
+}
+
 .close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
+  padding: 12px;
 }
 
 .close:hover {
-  background-color: #f44336;
-  color: white;
+  color: #f44336;
 }
 
 .header {
@@ -102,7 +98,7 @@ input {
   margin: 0;
   border: none;
   border-radius: 0;
-  width: 75%;
+  width: 72%;
   padding: 10px;
   float: left;
   font-size: 16px;
