--- a/sesion2/movement.css
+++ b/sesion2/movement.css
@@ -1,19 +1,20 @@
-li {
-  transition: 0.2s;
-}
-
 ul li:hover {
-  background: #ddd;
+  background-color: #ddd;
 }
 
 .close:hover {
   color: #f44336;
 }
 
-input, button {
-  transition: 0.3s;
-}
-
 button:hover {
   background-color: #cfc5bb;
+}
+
+input,
+button {
+  transition: all 0.3s;
+}
+
+li {
+  transition: all 0.2s;
 }
