--- a/assets/styles-core.css
+++ b/assets/styles-core.css
@@ -13,7 +13,7 @@ body {
 
 header {
   text-align: center;
-  padding:  .5em 0;
+  padding: 0.5em 0;
 }
 
 main {
@@ -26,11 +26,12 @@ footer {
   left: 0;
   bottom: 0;
   color: white;
-  padding: .5em 0;
+  padding: 0.5em 0;
   width: 100%;
 }
 
-header, footer {
+header,
+footer {
   text-align: center;
 }
 
@@ -47,7 +48,7 @@ h2 {
 }
 
 ul {
-  margin: 0;
+  margin: 10px 0;
   padding: 0;
   list-style-type: none;
 }
@@ -56,7 +57,7 @@ li {
   cursor: pointer;
   display: flex;
   align-items: center;
-  padding:  .8em .5em .7em 1.5em;  
+  padding: 0.8em 0.5em 0.7em 1.5em;
   background: #eee;
   font-size: 18px;
   transition: 0.2s;
@@ -89,23 +90,24 @@ li .content {
   margin-top: 5px;
 }
 
-input, button {
+input,
+button {
   margin: 0;
   border: none;
-  padding: .7em;
+  padding: 0.7em;
   font-size: 16px;
   transition: 0.3s;
 }
 
 input {
-  border-radius: .5em 0 0 .5em;
+  border-radius: 0.5em 0 0 0.5em;
   width: 60%;
 }
 
 button {
   width: 23%;
   cursor: pointer;
-  border-radius: 0 .5em .5em 0;
+  border-radius: 0 0.5em 0.5em 0;
   background-color: burlywood;
   color: #29191ae6;
 }
@@ -114,15 +116,14 @@ button:hover {
   background-color: #cfc5bb;
 }
 
-@media (max-width: 700px) { 
-
+@media (max-width: 700px) {
   h1 {
-    font-size:  1.5em;
+    font-size: 1.5em;
   }
 
   h2 {
     font-size: 28px;
-    margin: 0 0 .5em 0;
+    margin: 0 0 0.5em 0;
   }
 
   main {
@@ -133,12 +134,13 @@ button:hover {
     text-align: center;
   }
 
-  input, button {
-    width:  90%;
+  input,
+  button {
+    width: 90%;
     margin: 5px auto;
-    border-radius: .2em;
-    transition: .6s;
-    padding: .5em 5%;
+    border-radius: 0.2em;
+    transition: 0.6s;
+    padding: 0.5em 5%;
   }
 
   button {
