--- a/sesion2/position.css
+++ b/sesion2/position.css
@@ -1,5 +1,12 @@
-html {
-  height: 100%;
+header,
+footer,
+main {
+  text-align: center;
+}
+
+.dark-background-color {
+  background-color: darkgoldenrod;
+  color: white;
 }
 
 body {
@@ -7,7 +14,7 @@ body {
 }
 
 header {
-  padding:  .5em 0;
+  padding: 0.5em 0;
 }
 
 main {
@@ -19,38 +26,20 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  padding: .5em 0;
+  padding: 0.5em 0;
   width: 100%;
 }
 
-header, footer {
-  text-align: center;
-}
-
-.dark-background-color {
-  background-color: darkgoldenrod;
-  color: white
-}
-
-/* 1.1 */
-ul {
-  margin: 10px 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-ul li {
-  padding:  .8em .5em .7em 1.5em;  
-}
-
-.header {
+.subtitulo {
   padding: 30px 10%;
   text-align: center;
   margin-top: 5px;
 }
 
-input, button {
-  margin: 0;
+ul {
+  list-style-type: none;
+  margin: 10px 0;
+  padding: 0;
 }
 
 input {
@@ -59,4 +48,8 @@ input {
 
 button {
   width: 23%;
+}
+
+ul li {
+  padding: 0.8em 0.5em 0.7em 1.5em;
 }
