--- a/sesion2/responsive.css
+++ b/sesion2/responsive.css
@@ -1,28 +1,28 @@
-@media (max-width: 700px) { 
+@media (max-width: 700px) {
+  html {
+    height: 100%;
+  }
 
   h1 {
-    font-size:  1.5em;
+    font-size: 1.5em;
   }
 
   h2 {
-    font-size: 28px;
-    margin: 0 0 .5em 0;
+    font-size: 24px;
+    margin: 0 0 0.5em 0;
   }
 
   main {
     width: 90%;
   }
 
-  .header {
-    text-align: center;
-  }
-
-  input, button {
-    width:  90%;
+  input,
+  button {
+    width: 90%;
     margin: 5px auto;
-    border-radius: .2em;
-    transition: .6s;
-    padding: .5em 5%;
+    border-radius: 0.2em;
+    transition: 0.6s;
+    padding: 0.5em 5%;
   }
 
   button {
